Jobs insertion done

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -429,7 +429,7 @@
                     <li><a href="#">Customer Service</a></li>
                     <li><a href="#">Education</a></li>
                     <li><a href="#">Etc , Misc</a></li>
-                    <li><a href="#">RESTAURANTS AND BARS</a></li>
+                    <li><a href="all-jobs">RESTAURANTS AND BARS</a></li>
                     <li><a href="#">General Labor</a></li>
                     <li><a href="#">Government</a></li>
                     <li><a href="#">Human Resources</a></li>
