--- a/static/css/jobs/Jobs.css
+++ b/static/css/jobs/Jobs.css
@@ -13,3 +13,52 @@
     justify-content: space-between;
 }
 
+.marginTopJobDetails{
+    margin-top:-40px !important;
+}
+
+
+.b{
+    background-color:#262626;
+    color:bisque
+}
+
+.mapf{
+    border: 13px dotted;
+    border-radius: 15px;
+    
+    border-color: plum;
+}
+
+.slot{
+    background-color:black;
+    padding-top: 10px;
+    padding-left: 37px;
+    padding-bottom: 10px;
+    border-radius: 15px;
+    border-color: plum;
+    border: 3px dotted;
+    margin-top:5px;
+    margin-bottom: 10px;
+}
+
+.navbar{
+    background-color:#800080;
+    
+}
+
+.navbar-brand{
+    color:#ffc107
+}
+
+
+.field{
+    background-color: #24829A;
+    border: 3px dotted;
+    border-color:#ffc107;
+    border-radius:13px
+}
+
+.modal {
+  font-weight: normal;
+}
