--- a/templates/jobs/base.html
+++ b/templates/jobs/base.html
@@ -2,23 +2,31 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jobs</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/jobs/Jobs.css'%}">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'tinymce/js/tinymce/tinymce.min.js'%}"></script>
+    
+    <style>
+      a {
+        text-decoration: none !important;
+      }
+    </style>
     {% block extra_css %}
     {% endblock extra_css %}
 
   </head>
-  <body>
+  <body class="b">
     
     {% block content %} {% endblock %}
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-    
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMLvaAVhSR3bT8KQFDpGH4tHoMN8xEOkY"></script>
+
     {% block extra_needed_js %}
     {% endblock extra_needed_js %}
 
